--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 env:
   GIT_USER: mufiye
   GIT_EMAIL: mufiye140520@gmail.com
-  DEPLOY_REPO: mufiye.github.io
+  DEPLOY_REPO: mufiye/mufiye.github.io
   DEPLOY_BRANCH: master
 
 jobs:
@@ -18,11 +18,25 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node_version: [14.x]
+        node_version: [12.x]
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Checkout theme repo
+        uses: actions/checkout@v2
+        with:
+          repository: ${{ env.THEME_REPO }}
+          ref: ${{ env.THEME_BRANCH }}
+          path: themes/concise
+
+      - name: Checkout deploy repo
+        uses: actions/checkout@v2
+        with:
+          repository: ${{ env.DEPLOY_REPO }}
+          ref: ${{ env.DEPLOY_BRANCH }}
+          path: .deploy_git
 
       - name: Use Node.js ${{ matrix.node_version }}
         uses: actions/setup-node@v1
@@ -40,13 +54,12 @@ jobs:
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           git config --global user.name $GIT_USER
           git config --global user.email $GIT_EMAIL
+          cp _config.theme.yml themes/concise/_config.yml
 
       - name: Install dependencies
         run: |
-          npm install hexo-cli -g
           npm install
 
       - name: Deploy hexo
         run: |
-          hexo g
-          hexo d
+          npm run deploy
