--- a/themes/keep/_config.yml
+++ b/themes/keep/_config.yml
@@ -111,7 +111,7 @@ post:
 # ---------------------------------------------------------------------------------------
 code_copy:
   enable: true
-  style: mac # values: default | mac
+  style: default # values: default | mac
 
 # ---------------------------------------------------------------------------------------
 # Table of Contents in the Sidebar
